--- a/style.css
+++ b/style.css
@@ -111,3 +111,17 @@ body{
     margin-top: 40px;
     text-align: justify;
 }
+.footer{
+    height: 100px;
+    width: auto;
+    padding-top: 30px;
+    justify-content: center;
+    background-color: rgb(99, 96, 96);
+    text-align: center;
+    align-items: center;
+}
+.social-media{
+    background-color: rgba(173, 169, 169,.3);
+    width: 100%;
+    padding-top: 10px;
+}
